--- a/vp-workshop/main/patterns.html
+++ b/vp-workshop/main/patterns.html
@@ -176,38 +176,111 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="createConsumePatterns.html">5. Creating and Consuming Patterns</a>
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="consumingPatterns.html">5. Validated Patterns</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="consumingPatterns.html">Consuming a Validated Pattern</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#objectives">Topic Objectives</a>
   </li>
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="createConsumePatterns.html">Exercises</a>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#workflow">Deployment Workflow</a>
   </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#layering">Solution Layering</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#multiArgos">Multiple Argo&#8217;s</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#exercises">Exercies</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="creatingPatterns.html">Creating Validated Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="creatingPatterns.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="creatingPatterns.html#technology">Core Products and Technology</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="creatingPatterns.html#exercises">Exercies</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="consumingPatterns.html">Consuming Patterns</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#exercises">Exercises</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="secrets.html">6. Secrets Management</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="secrets.html">Exercises</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="selfContained.html">7. Self Contained Patterns</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="selfContained.html">Exercises</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="gitopsRoughEdges.html">8. GitOps Rough Edges</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="gitopsRoughEdges.html">Exercises</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="multipleClusters.html">9. Working with Multiple Clusters</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="troubleshooting.html">10. Troubleshooting</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="helm.html">11. Helm for Fun and Profit</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="additionalTopics.html">12. Additional Resources</a>
   </li>
@@ -234,10 +307,16 @@
   <div class="content">
 <article class="doc">
 <div class="sect1">
+<h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
 <h2 id="_topic_objectives"><a class="anchor" href="#_topic_objectives"></a>Topic Objectives</h2>
 <div class="sectionbody">
 <div id="objectives" class="paragraph">
-<p>In this topic  we will discuss:</p>
+<p>In this topic we will discuss:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -348,7 +427,30 @@
 <h2 id="batteries"><a class="anchor" href="#batteries"></a>Batteries Included</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Validated Patterns are a "batteries included" solution. This means that wherever you start with the patterns framework a core and configurable set of components are delivered out of the box. Reusability is a major theme that will be seen throughout this workshop.</p>
+<p>Validated Patterns are a "batteries included" solution. This means that wherever you start with the patterns framework a core and configurable set of components are delivered out of the box.</p>
+</div>
+<div class="paragraph">
+<p>Take a look at the following graphic - each Validated Pattern (use-case dependent) consumes these technologies. The modularity of the framework allows us to add/remove resources to meet the requirements of the use-case. If a pattern only deploys on a single cluster, there is no need to deploy Red Hat Advanced Cluster Management for Kubernetes, therefore we can remove the declarations for Red Hat Advanced Cluster Management for Kubernetes in the <code>values-hub.yaml</code>.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="_images/introduction-techSlide.png" alt="introduction techSlide">
+</div>
+</div>
+<div class="admonitionblock important">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-important" title="Important"></i>
+</td>
+<td class="content">
+Reusability is a major theme that will be seen throughout this workshop.
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>When we dive into these core technologies we start to see the low-level technology being used throughout the framework</p>
 </div>
 <div class="imageblock">
 <div class="content">
