--- a/vp-workshop/main/troubleshooting.html
+++ b/vp-workshop/main/troubleshooting.html
@@ -176,38 +176,111 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="createConsumePatterns.html">5. Creating and Consuming Patterns</a>
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="consumingPatterns.html">5. Validated Patterns</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="consumingPatterns.html">Consuming a Validated Pattern</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#objectives">Topic Objectives</a>
   </li>
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="createConsumePatterns.html">Exercises</a>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#workflow">Deployment Workflow</a>
   </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#layering">Solution Layering</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#multiArgos">Multiple Argo&#8217;s</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#exercises">Exercies</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="creatingPatterns.html">Creating Validated Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="creatingPatterns.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="creatingPatterns.html#technology">Core Products and Technology</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="creatingPatterns.html#exercises">Exercies</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="consumingPatterns.html">Consuming Patterns</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#exercises">Exercises</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="secrets.html">6. Secrets Management</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="secrets.html">Exercises</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="selfContained.html">7. Self Contained Patterns</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="selfContained.html">Exercises</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="gitopsRoughEdges.html">8. GitOps Rough Edges</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="gitopsRoughEdges.html">Exercises</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="multipleClusters.html">9. Working with Multiple Clusters</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item is-current-page" data-depth="1">
     <a class="nav-link" href="troubleshooting.html">10. Troubleshooting</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="helm.html">11. Helm for Fun and Profit</a>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="additionalTopics.html">12. Additional Resources</a>
   </li>
@@ -233,7 +306,20 @@
   </div>
   <div class="content">
 <article class="doc">
+<div class="sect1">
+<h2 id="_troubleshooting"><a class="anchor" href="#_troubleshooting"></a>Troubleshooting</h2>
+<div class="sectionbody">
 
+</div>
+</div>
+<div class="sect1">
+<h2 id="_topic_objectives"><a class="anchor" href="#_topic_objectives"></a>Topic Objectives</h2>
+<div class="sectionbody">
+<div id="objectives" class="paragraph">
+<p>In this topic we will discuss:</p>
+</div>
+</div>
+</div>
 <nav class="pagination">
   <span class="prev"><a href="multipleClusters.html">9. Working with Multiple Clusters</a></span>
   <span class="next"><a href="helm.html">11. Helm for Fun and Profit</a></span>
