--- a/vp-workshop/main/consumingPatterns.html
+++ b/vp-workshop/main/consumingPatterns.html
@@ -187,7 +187,7 @@
     <a class="nav-link" href="#objectives">Topic Objectives</a>
   </li>
   <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="#workflow">Deployment Workflow</a>
+    <a class="nav-link" href="#workflow">Validated Pattern Workflow</a>
   </li>
   <li class="nav-item" data-depth="3">
     <a class="nav-link" href="#layering">Solution Layering</a>
@@ -211,31 +211,31 @@
     <a class="nav-link" href="patternsWrapperScript.html#help">Wrapper Help</a>
   </li>
   <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="repoFork.html#about">To Fork or Not to Fork</a>
+  </li>
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="#exercises">Exercises</a>
   </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="creatingPatterns.html">Creating Validated Patterns</a>
-  </li>
-  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="creatingPatterns.html">Creating a Validated Pattern</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="creatingPatterns.html#objectives">Topic Objectives</a>
   </li>
-  <li class="nav-item" data-depth="2">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="creatingPatterns.html#technology">Core Products and Technology</a>
-<ul class="nav-list">
   <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="creatingPatterns.html#exercises">Exercies</a>
+    <a class="nav-link" href="creatingPatterns.html#common">Understanding Common</a>
   </li>
-</ul>
-  </li>
-  <li class="nav-item is-current-page" data-depth="2">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="consumingPatterns.html">Consuming Patterns</a>
-<ul class="nav-list">
   <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="#exercises">Exercises</a>
+    <a class="nav-link" href="creatingPatterns.html#requirements">Pattern Requirements</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="creatingPatterns.html#creating">Creation Process</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="creatingPatterns.html#exercises">Exercises</a>
   </li>
 </ul>
   </li>
